@@ -2987,6 +2987,35 @@ operator|=
 name|startOffset
 expr_stmt|;
 block|}
+name|invertState
+operator|.
+name|length
+operator|++
+expr_stmt|;
+if|if
+condition|(
+name|invertState
+operator|.
+name|length
+operator|<
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"too many tokens in field '"
+operator|+
+name|field
+operator|.
+name|name
+argument_list|()
+operator|+
+literal|"'"
+argument_list|)
+throw|;
+block|}
 comment|//System.out.println("  term=" + invertState.termAttribute);
 comment|// If we hit an exception in here, we abort
 comment|// all buffered documents since the last
@@ -3006,11 +3035,6 @@ expr_stmt|;
 name|aborting
 operator|=
 literal|false
-expr_stmt|;
-name|invertState
-operator|.
-name|length
-operator|++
 expr_stmt|;
 block|}
 comment|// trigger streams to perform end-of-stream operations
