@@ -228,6 +228,38 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|analysis
+operator|.
+name|tokenattributes
+operator|.
+name|CharTermAttribute
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|tokenattributes
+operator|.
+name|PositionIncrementAttribute
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|document
 operator|.
 name|BinaryDocValuesField
@@ -371,6 +403,22 @@ operator|.
 name|document
 operator|.
 name|TextField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|index
+operator|.
+name|FieldInfo
+operator|.
+name|IndexOptions
 import|;
 end_import
 
@@ -12992,6 +13040,243 @@ argument_list|()
 argument_list|)
 expr_stmt|;
 name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+comment|// kind of slow, but omits positions, so just CPU
+annotation|@
+name|Nightly
+DECL|method|testTooManyTokens
+specifier|public
+name|void
+name|testTooManyTokens
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|iw
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+literal|null
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|FieldType
+name|ft
+init|=
+operator|new
+name|FieldType
+argument_list|(
+name|TextField
+operator|.
+name|TYPE_NOT_STORED
+argument_list|)
+decl_stmt|;
+name|ft
+operator|.
+name|setIndexOptions
+argument_list|(
+name|IndexOptions
+operator|.
+name|DOCS_AND_FREQS
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Field
+argument_list|(
+literal|"foo"
+argument_list|,
+operator|new
+name|TokenStream
+argument_list|()
+block|{
+name|CharTermAttribute
+name|termAtt
+init|=
+name|addAttribute
+argument_list|(
+name|CharTermAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|PositionIncrementAttribute
+name|posIncAtt
+init|=
+name|addAttribute
+argument_list|(
+name|PositionIncrementAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+name|long
+name|num
+init|=
+literal|0
+decl_stmt|;
+annotation|@
+name|Override
+specifier|public
+name|boolean
+name|incrementToken
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|num
+operator|==
+name|Integer
+operator|.
+name|MAX_VALUE
+operator|+
+literal|1
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+name|clearAttributes
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+name|num
+operator|==
+literal|0
+condition|)
+block|{
+name|posIncAtt
+operator|.
+name|setPositionIncrement
+argument_list|(
+literal|1
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|posIncAtt
+operator|.
+name|setPositionIncrement
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+name|termAtt
+operator|.
+name|append
+argument_list|(
+literal|"a"
+argument_list|)
+expr_stmt|;
+name|num
+operator|++
+expr_stmt|;
+if|if
+condition|(
+name|VERBOSE
+operator|&&
+name|num
+operator|%
+literal|1000000
+operator|==
+literal|0
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"indexed: "
+operator|+
+name|num
+argument_list|)
+expr_stmt|;
+block|}
+return|return
+literal|true
+return|;
+block|}
+block|}
+argument_list|,
+name|ft
+argument_list|)
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"didn't hit exception"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|expected
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+name|expected
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"too many tokens"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|iw
 operator|.
 name|close
 argument_list|()
